# transcorp-digital-twin

./: .env.example  Cargo.toml  README.md  auth.json
postman/: transcorp-digital-twin.postman_collection.json
src/: config.rs  main.rs  routes.rs  state.rs
src/handlers/: card.rs  encryption.rs  kyc.rs  mod.rs  registration.rs  transaction.rs  webhook.rs
src/middleware/: auth.rs
src/models/: card.rs  corporate.rs  customer.rs  envelope.rs  error.rs  mod.rs  transaction.rs
src/services/: balance.rs  id_gen.rs  mod.rs
